outfit-planner-system/infrastructure/kubernetes/ingres/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: your-ingress
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "true"  # Optional: Redirect HTTP to HTTPS
spec:
  tls:
    - hosts:
        - keycloak-server   # Replace with your actual domain
      secretName: keycloak-tls
  rules:
    - host: keycloak-server   # Replace with your actual domain
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: keycloak-server-service
                port:
                  number: 8443
